@@ -684,3 +684,4 @@ Updated the Drupal script installer to versions 5.2 and 4.7.7.
 Added an option on the Edit Owner Limits page to prevent use of the HTML editor.
 Added a script installer for the PostNuke CMS.
 AWstats statistics are now included in cPanel migrations.
+The real name of a virtual server's Unix user is updated when the server's description is changed.
